<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="68dp"
    android:layout_width="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:elevation="15dp"
        android:layout_margin="1dp"
        app:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tiempo_historial"
                    android:layout_gravity="center"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/tiempo_historial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tiempoEstimado_historial"
                    android:layout_gravity="center"
                    android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distancia_historial"
                    android:layout_gravity="center"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/distancia_historial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distanciaRecorrida_historial"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>