<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <include layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_30dp"
            android:paddingRight="@dimen/padding_30dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editText_registro">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_nombre_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText_nombre"
                    android:inputType="textPersonName"
                    android:maxLength="30"
                    android:textSize="15sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editText_registro"
                android:layout_marginTop="@dimen/padding_10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_apellidos_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/editText_apellidos"
                    android:inputType="textPersonName"
                    android:maxLength="40"
                    android:textSize="15sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editText_registro"
                app:counterMaxLength="15"
                app:counterEnabled="true"
                android:layout_marginTop="@dimen/padding_10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_usuario_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/editText_usuario_registro"
                    android:inputType="text"
                    android:maxLength="15"
                    android:textSize="15sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editText_registro">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/editText_email"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editText_registro"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="@dimen/padding_10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_contraseña_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/editText_contraseña"
                    android:inputType="textPassword"
                    android:textSize="15sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--<com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_comtraseña_conf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editText_registro"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="@dimen/padding_5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_contraseña_conf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/editText_conf_contraseña"
                    android:inputType="textPassword"
                    android:textSize="15sp"/>
            </com.google.android.material.textfield.TextInputLayout>-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_sexo"
                android:textSize="15sp"
                android:textColor="@color/primary_text"
                android:layout_marginTop="@dimen/padding_20dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:theme="@style/editText_registro"
                android:padding="5dp"
                android:layout_marginTop="@dimen/padding_10dp">
                <RadioButton
                    android:id="@+id/radio_masc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_masculino"/>
                <RadioButton
                    android:id="@+id/radio_fem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_femenino"
                    android:layout_marginLeft="70dp"/>
            </RadioGroup>

            <Button
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:text="@string/boton_guardar_registro"
                android:theme="@style/RicesButom"
                android:layout_marginTop="70dp"
                android:onClick="iniciarSesionRegistro"/>

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>