<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:fitsSystemWindows="true"
    android:background="@color/icons">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/fastrunning"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="28dp"
                android:paddingRight="28dp"
                android:paddingTop="28dp"
                android:layout_weight="0.5">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_login_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/editText_login"
                    app:errorEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/editText_usuario"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_login_contraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/editText_login">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_contraseña"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/editText_contraseña"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/boton_iniciar"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/iniciar_sesion"
                    android:theme="@style/RicesButom"
                    android:onClick="iniciarSesion"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/textView_no_cuenta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/tex_registrate"
                        android:textColor="@color/primary"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/textView_registro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/aqui"
                        android:textStyle="bold"
                        android:layout_toRightOf="@+id/textView_no_cuenta"
                        android:textColor="@color/primary"
                        android:textSize="14sp"
                        android:layout_marginLeft="4dp"
                        android:onClick="registrarse"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>