<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="facci.arcentales.runningfast.Fragments.RunFragment"
    android:fitsSystemWindows="true">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondofast2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:weightSum="1"
            android:padding="@dimen/padding_20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.5">
                <Button
                    android:id="@+id/boton_iniciar_conteo"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:text="@string/iniciar_conteo"
                    android:textSize="@dimen/padding_30dp"
                    android:layout_centerInParent="true"
                    android:theme="@style/RicesButomIniciar"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <LinearLayout
                        android:id="@+id/layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/padding_10dp"
                        android:layout_weight="0.5">
                        <TextView
                            android:id="@+id/txt_tiempo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tiempo"
                            android:textSize="25sp"
                            android:textAlignment="center"
                            android:textColor="@color/icons"/>
                        <Chronometer
                            android:id="@+id/tiempo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/padding_30dp"
                            android:layout_marginTop="@dimen/padding_10dp"
                            android:textAlignment="center"
                            android:textColor="@color/icons"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/layouts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/padding_10dp"
                        android:layout_toRightOf="@+id/layout"
                        android:layout_weight="0.5">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/distancia"
                            android:textSize="25sp"
                            android:textAlignment="center"
                            android:textColor="@color/icons"/>
                        <Chronometer
                            android:id="@+id/distancia"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:format="00:00"
                            android:textSize="@dimen/padding_30dp"
                            android:layout_marginTop="@dimen/padding_10dp"
                            android:textAlignment="center"
                            android:textColor="@color/icons"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>